fix(#10700): resolve dark mode issue in user-drawer-tab
- update dark theme colors for user-drawer-tab-component
- Replace previous fill color logic with a function that
  returns color based on active/inactive tab state

--- a/frontend/src/_styles/designtheme.scss
+++ b/frontend/src/_styles/designtheme.scss
@@ -64,6 +64,9 @@
 :root,
 .light-theme {
     --base: #FCFCFD;
+    --base-drawer: #eceef0;
+    --base-selected: #FCFCFD;
+    --base-deselected: var(--base-drawer);
     --base-black: #18181A;
     --text-black-000: #000000;
     --slate12: #313739;
@@ -86,6 +89,8 @@
     --text-placeholder: #6A727C;
     --text-disbled: #ACB2B9;
     --text-on-solid: #FFFFFF;
+    --text-selected: #313739;
+    --text-deselected: #687076;
 
 
     // status
@@ -152,6 +157,9 @@
 .dark-theme {
     /* Remap your colors for dark mode */
     --base: #1f2936;
+    --base-drawer: #121518;
+    --base-selected: #1E2226;
+    --base-deselected: var(--base-drawer);
     --base-black: #FBFCFD;
     --text-black-000: #ffffff;
     --slate1: #1f2936;
@@ -175,6 +183,8 @@
     --text-placeholder: #858C94;
     --text-disbled: #545B64;
     --text-on-solid: #FAFCFF;
+    --text-selected: #FAFCFF;
+    --text-deselected: #545B64;
 
 
     // status
